--- a/style.css
+++ b/style.css
@@ -50,7 +50,7 @@ body {
 
 ::selection {
 	color: #fff !important;
-	background-color: rgb(181, 255, 181) !important;
+	background-color: #9EB6BD !important;
 }
 
 #shell #output {
